# tvaf-pdmdb-jf

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
tvaf_pdmdb_jf/: __init__.py  movie-torrents.csv
