[metadata]
name = tvaf_pdmdb_jf
description = A small library of public-domain media, for use with tvaf and jellyfin
url = https://github.com/AllSeeingEyeTolledEweSew/tvaf-pdmdb-jf
author = AllSeeingEyeTolledEweSew
author_email = asetes@pm.me
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    importlib-resources>=3.3.0
    typing-extensions>=3.6.5
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    tvaf_pdmdb_jf_generate = tvaf_pdmdb_jf:generate

[options.package_data]
tvaf_pdmdb_jf = movie-torrents.csv

[flake8]
max-line-length = 88
extend-ignore =
    E203

[pydocstyle]
convention = google

[mypy]
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True

[tox:tox]
isolated_build = True
envlist = py

[testenv]
deps =
    safety
    pytest
commands =
    safety check
    pytest
